--- a/Python/Python Study Notes/2. Basic.md
+++ b/Python/Python Study Notes/2. Basic.md
@@ -103,6 +103,10 @@ built-in objects form the core of every Python program.
 
 ## Python’s Core Data Types
 
+everything in a Python system is an object type and may be processed by your Python programs
+
+> For instance, you can pass a class to a function, assign it to a variable, stuff it in a list or dictionary, and so on.
+
 Python’s built-in object types and some of the syntax used to code their literals:
 
 ```
@@ -138,6 +142,490 @@ this means that **Python is dynamically typed**.
 **Python is  strongly typed**
 
 > a constraint that means you can perform on an object only operations that are valid for its type.
+
+
+
+### Sequence
+
+in Python we call a **sequence—a positionally ordered collection of other objects**. Sequences maintain a **left-to-right order among the items they contain**: their items are stored and fetched by their relative positions. Strictly speaking, strings are sequences of one-character strings; other, more general sequence types include lists and tuples
+
+
+
+### Immutable and Mutable
+
+- **Numbers, Strings, and Tuples are Immutable**. immutable objects’ values can't be changed in place
+
+  > immutability can be used to **guarantee that an object remains constant throughout your program**
+
+
+- **Lists, Dictionaries, and Sets are Mutable.** they can be changed in place freely, as can most new objects you’ll code with classes.
+
+  > mutable objects’ values can be changed at any time and place (and whether you expect it or not).
+
+  ​
+
+
+
+### Object classifications
+
+| Object type   | Category  | Mutable? 是否可变 |
+| ------------- | --------- | ------------- |
+| Numbers (all) | Numeric   | No            |
+| Strings (all) | Sequence  | No            |
+| Lists         | Sequence  | Yes           |
+| Dictionaries  | Mapping   | Yes           |
+| Tuples        | Sequence  | No            |
+| Files         | Extension | N/A           |
+| Sets          | Set       | Yes           |
+| Frozenset     | Set       | No            |
+| bytearray     | Sequence  | Yes           |
+
+- **Objects share operations according to their category**; for instance, sequence objects —strings, lists, and tuples—all share sequence operations such as concatenation, length, and indexing.
+
+
+- **Only mutable objects—lists, dictionaries, and sets—may be changed in place**; you cannot change numbers, strings, or tuples in place.
+
+
+
+- **Files export only methods, so mutability doesn’t really apply to them**—their state may be changed when they are processed, but this isn’t quite the same as Python core type mutability constraints.
+
+
+
+- “Numbers” in table above includes all number types: integer (and the distinct long integer in 2.X), floating point, complex, decimal, and fraction.
+
+
+
+- “Strings” in table above includes str, as well as bytes in 3.X and unicode in 2.X; the bytearray string type in 3.X, 2.6, and 2.7 is mutable.
+
+
+
+- **Sets** are something like the keys of a valueless dictionary, but they don’t map to values and **are not ordered**, so sets are neither a mapping nor a sequence type; frozenset is an immutable variant of set.
+
+
+
+- In addition to type category operations, as of Python 2.6 and 3.0 all the types in table above have callable methods, which are generally specific to their type.
+
+
+
+### Object Flexibility
+
+compound object types—collections with components. In general:
+
+- **Lists, dictionaries, and tuples can hold any kind of object.**
+
+
+- **Sets can contain any type of immutable object.**
+
+
+
+- **Lists, dictionaries, and tuples can be arbitrarily nested.**
+
+
+
+- **Lists, dictionaries, and sets can dynamically grow and shrink.**
+
+an example of nesting:
+
+```
+>>> L = ['abc', [(1, 2), ([3], 4)], 5]
+>>> L[1] 
+[(1, 2), ([3], 4)]
+>>> L[1][1] 
+([3], 4)
+>>> L[1][1][0]
+[3]
+>>> L[1][1][0][0] 
+3
+```
+
+![A nested object tree](img/A nested object tree.jpg)
+
+> A nested object tree with the offsets of its components, created by running the literal expression [‘abc’, [(1, 2), ([3], 4)], 5]. **Syntactically nested objects are internally represented as references (i.e., pointers) to separate pieces of memory.**
+
+
+
+### References Versus Copies / 引用 vs 拷贝
+
+**assignments always store references to objects, not copies of those objects.** Because assignments can generate multiple references to the same object
+
+**changing a mutable object in place may affect other references to the same object elsewhere in your program**. If you don’t want such behavior, you’ll need to tell Python to copy the object explicitly.
+
+```
+>>> X = [1, 2, 3]
+>>> L = ['a', X, 'b']			# Embed references to X's object
+>>> D = {'x':X, 'y':2}
+```
+
+Because lists are mutable, changing the shared list object from any of the three references also changes what the other two reference:
+
+```
+>>> X[1] = 'surprise'			# Changes all three references!
+>>> L 
+['a', [1, 'surprise', 3], 'b']
+>>> D 
+{'x': [1, 'surprise', 3], 'y': 2}
+```
+
+![Shared object references](img/Shared object references.jpg)
+
+> Shared object references: because the list referenced by variable X is also referenced from within the objects referenced by L and D, changing the shared list from X makes it look different from L and D, too.
+
+
+
+#### Copies:
+
+- Slice expressions with empty limits ( `L[:]` ) copy sequences.
+
+
+- The dictionary, set, and list copy method ( `X.copy()` ) copies a dictionary, set, or list (the list’s copy is new as of 3.3).
+
+
+
+- Some built-in functions, such as list and dict make copies ( `list(L)` , `dict(D)` , `set(S)` ).
+
+
+
+- The copy standard library module makes full copies when needed.
+
+example:
+
+```
+>>> L = [1,2,3]
+>>> D = {'a':1, 'b':2}
+>>> A = L[:]						# Instead of A = L (or list(L))
+>>> B = D.copy()					# Instead of B = D (ditto for sets)
+>>> A[1] = 'Ni'
+>>> B['c'] = 'spam'
+>>>
+>>> L, D 
+([1, 2, 3], {'a': 1, 'b': 2})
+>>> A, B 
+([1, 'Ni', 3], {'a': 1, 'c': 'spam', 'b': 2})
+```
+
+```
+>>> X = [1, 2, 3]
+>>> L = ['a', X[:], 'b']		# Embed copies of X's object
+>>> D = {'x':X[:], 'y':2}
+```
+
+note:
+
+**empty-limit slices and the dictionary copy method only make top-level copies**; that is, they do not copy nested data structures, if any are present. If you need a complete, fully independent copy of a deeply nested data structure (like the various record structures we’ve coded in recent chapters), use the standard copy module.
+
+```
+import copy 
+X = copy.deepcopy(Y)		# Fully copy an arbitrarily nested object Y
+```
+
+This call recursively traverses objects to copy all their parts.
+
+
+
+### Comparisons, Equality, and Truth / 比较，相等性和真值
+
+All Python objects also respond to comparisons: tests for equality, relative magnitude, and so on.Python automatically traverses data structures to apply comparisons from left to right, and as deeply as needed.
+
+This is sometimes called a recursive comparison—the same comparison requested on the top-level objects is applied to each of the nested objects, and to each of their nested objects, and so on, until a result is found.
+
+the recursion is automatic. For instance, a comparison of list objects compares all their components automatically until a mismatch is found or the end is reached:
+
+```
+>>> L1 = [1, ('a', 3)]			# Same value, unique objects
+>>> L2 = [1, ('a', 3)]
+>>> L1 == L2, L1 is L2 			# Equivalent? Same object?
+(True, False)
+```
+
+two ways to test for equality:
+
+- The `==` operator tests value equivalence.
+
+  >  Python performs an equivalence test, comparing all nested objects recursively.
+
+
+- The `is` operator tests object identity. 
+
+  > Python tests whether the two are really the same object (i.e., live at the same address in memory).
+
+#### Python compares types as follows:
+
+- Numbers are compared by relative magnitude, after conversion to the common highest type if needed.
+
+
+- Strings are compared lexicographically (by the character set code point values returned by ord), and character by character until the end or first mismatch ("abc" < "ac").
+
+
+
+- Lists and tuples are compared by comparing each component from left to right, and recursively for nested structures, until the end or first mismatch ([2] > [1, 2]).
+
+
+
+- Sets are equal if both contain the same items (formally, if each is a subset of the other), and set relative magnitude comparisons apply subset and superset tests.
+
+
+
+- Dictionaries compare as equal if their sorted (key, value) lists are equal. Relative magnitude comparisons are not supported for dictionaries in Python 3.X, but they work in 2.X as though comparing sorted (key, value) lists.
+
+
+
+- Nonnumeric mixed-type magnitude comparisons (e.g., 1 < 'spam') are errors in Python 3.X. They are allowed in Python 2.X, but use a fixed but arbitrary ordering rule based on type name string. By proxy, this also applies to sorts, which use comparisons internally: nonnumeric mixed-type collections cannot be sorted in 3.X.
+
+
+#### Python 2.X and 3.X mixed-type comparisons and sorts
+
+In Python 2.X these all work, though mixed types compare by an arbitrary ordering:
+
+```
+c:\code> c:\python27\python
+>>> 11 == '11' 					# Equality does not convert non-numbers
+False
+>>> 11 >= '11' 					# 2.X compares by type name string: int, str
+False
+>>> ['11', '22'].sort()			# Ditto for sorts
+>>> [11, '11'].sort()
+```
+
+Python 3.X disallows mixed-type magnitude testing, except numeric types and manually converted types:
+
+```
+c:\code> c:\python33\python
+>>> 11 == '11' False						# 3.X: equality works but magnitude does not
+>>> 11 >= '11' 
+TypeError: unorderable types: int() > str()
+
+>>> ['11', '22'].sort() 					# Ditto for sorts
+>>> [11, '11'].sort() 
+TypeError: unorderable types: str() < int()
+
+>>> 11 > 9.123 								# Mixed numbers convert to highest type
+True
+>>> str(11) >= '11', 11 >= int('11') 		# Manual conversions force the issue
+(True, True)
+```
+
+#### Python 2.X and 3.X dictionary comparisons
+
+In Python 2.X, dictionaries support magnitude comparisons, as though you were comparing sorted key/value lists:
+
+```
+C:\code> c:\python27\python
+>>> D1 = {'a':1, 'b':2}
+>>> D2 = {'a':1, 'b':3}
+>>> D1 == D2 					# Dictionary equality: 2.X + 3.X
+False
+>>> D1 < D2 					# Dictionary magnitude: 2.X only
+True
+```
+
+magnitude comparisons for dictionaries are removed in Python 3.X because they incur too much overhead when equality is desired (equality uses an optimized scheme in 3.X that doesn’t literally compare sorted key/ value lists):
+
+```
+C:\code> c:\python33\python
+>>> D1 = {'a':1, 'b':2}
+>>> D2 = {'a':1, 'b':3}
+>>> D1 == D2 
+False
+>>> D1 < D2 
+TypeError: unorderable types: dict() < dict()
+```
+
+The alternative **in 3.X is to either write loops to compare values by key,** **or compare the sorted key/value lists manually**
+
+```
+>>> list(D1.items()) 
+[('b', 2), ('a', 1)]
+>>> sorted(D1.items()) 
+[('a', 1), ('b', 2)]
+>>>
+>>> sorted(D1.items()) < sorted(D2.items()) 		# Magnitude test in 3.X
+True
+>>> sorted(D1.items()) > sorted(D2.items()) 
+False
+```
+
+
+
+### The Meaning of True and False in Python
+
+In Python, as in most programming languages, **an integer 0 represents false**, and **an integer 1 represents true**. 
+
+Python recognizes **any empty data structure as false** and a**ny nonempty data structure as true**.
+
+each object is either true or false, as follows:
+
+- **Numbers are false if zero, and true otherwise**.
+
+
+- **Other objects are false if empty, and true otherwise**.
+
+examples of true and false values of objects in Python.
+
+```
+Example object truth values
+
+Object		Value
+
+"spam" 		True
+"" 			False
+[1, 2] 		True
+[] 			False
+{'a': 1} 	True
+{} 			False
+1 			True
+0.0 		False
+None		False
+```
+
+
+
+#### The None object
+
+Python also provides a special object called **None, which is always considered to be false**.it is the only value of a special data type in Python and typically serves as **an empty placeholder** (much like a NULL pointer in C). **it is a real object and a real piece of memory that is created and given a built-in name by Python itself.**
+
+- best practice dictates using None if the type of the list’s contents is variable or not yet known.
+
+
+- Keep in mind that None does not mean “undefined.” That is, None is something, not nothing. 
+
+
+- it is also the default return value of functions that don’t exit by running into a return statement with a result value.
+
+
+
+#### The bool type
+
+the built-in words True and False are just customized versions of the integers 1 and 0
+
+- When used explicitly in truth test code, the words True and False are equivalent to 1 and 0, but they make the programmer’s intent clearer.
+
+
+- Results of Boolean tests run interactively print as the words True and False, instead of as 1 and 0, to make the type of result clearer.
+
+a bool built-in function that can be used to test the Boolean value of an object if you want to make this explicit (i.e., whether it is true—that is, nonzero or nonempty):
+
+```
+>>> bool(1) 
+True
+>>> bool('spam') 
+True
+>>> bool({}) 
+False
+```
+
+
+
+### Type Objects
+
+even types themselves are an object type in Python：the type of an object is an object of type `type`
+
+> Seriously, a call to the built-in function type(X) returns the type object of object X.
+
+One note on type names: as of Python 2.2, each core type has a new built-in name added to support type customization through object-oriented subclassing: dict, list, str, tuple, int, float, complex, bytes, type, set, and more. In Python 3.X names all references classes, and in Python 2.X but not 3.X, file is also a type name and a synonym for open. Calls to these names are really object constructor calls, not simply conversion functions, though you can treat them as simple functions for basic usage.
+
+the types standard library module in Python 3.X provides additional type names for types that are not available as built-ins
+
+do type tests with the `isinstance` function
+
+```
+>>> type([1]) == type([])				# Compare to type of another list
+True
+>>> type([1]) == list					# Compare to list type name
+True
+>>> isinstance([1], list)				# Test if list or customization thereof
+True
+>>> 
+
+>>> import types						# types has names for other types
+>>> def f():pass
+... 
+>>> type(f) == types.FunctionType
+True
+```
+
+#### Python’s major built-in object types:
+
+![major built-in object types](img/major built-in object types.jpg)
+
+> Python’s major built-in object types, organized by categories. Everything is a type of object in Python, even the type of an object! Some extension types, such as named tuples, might belong in this figure too, but the criteria for inclusion in the core types set are not formal.
+
+
+
+### Other Types in Python
+
+a typical Python installation has dozens of additional object types available as linked-in C extensions or Python classes—regular expression objects, DBM files, GUI widgets, network sockets, and so on.
+
+
+
+## Built-in Type Gotchas / 内置类型陷阱
+
+### Assignment Creates References, Not Copies
+
+### Repetition Adds One Level Deep
+
+```
+>>> L = [4, 5, 6]
+>>> X = L * 4								# Like [4, 5, 6] + [4, 5, 6] + ... 
+>>> Y = [L] * 4								# [L] + [L] + ... = [L, L,...]
+
+>>> X 
+[4, 5, 6, 4, 5, 6, 4, 5, 6, 4, 5, 6]
+>>> Y 
+[[4, 5, 6], [4, 5, 6], [4, 5, 6], [4, 5, 6]]
+
+>>> L[1] = 0 								# Impacts Y but not X
+>>> X 
+[4, 5, 6, 4, 5, 6, 4, 5, 6, 4, 5, 6]
+>>> Y 
+[[4, 0, 6], [4, 0, 6], [4, 0, 6], [4, 0, 6]]
+
+>>> L = [4, 5, 6]
+>>> Y = [list(L)] * 4						# Embed a (shared) copy of L
+>> L[1] = 0
+>>> Y 
+[[4, 5, 6], [4, 5, 6], [4, 5, 6], [4, 5, 6]]
+
+>>> Y[0][1] = 99 							# All four copies are still the same
+>>> Y 
+[[4, 99, 6], [4, 99, 6], [4, 99, 6], [4, 99, 6]]
+
+>>> L = [4, 5, 6]
+>>> Y = [list(L) for i in range(4)]
+>>> Y 
+[[4, 5, 6], [4, 5, 6], [4, 5, 6], [4, 5, 6]]
+>>> Y[0][1] = 99
+>>> Y 
+[[4, 99, 6], [4, 5, 6], [4, 5, 6], [4, 5, 6]]
+```
+
+### Beware of Cyclic Data Structures
+
+**if a collection object contains a reference to itself, it’s called a cyclic object.** Python prints a [...] whenever it detects a cycle in the object, rather than getting stuck in an infinite loop (as it once did long ago)：
+
+```
+>>> L = ['grail']				# Append reference to same object
+>>> L.append(L)					# Generates cycle in object: [...]
+>>> L 
+['grail', [...]]
+```
+
+### Immutable Types Can’t Be Changed in Place
+
+**you can’t change an immutable object in place**. In-stead, you construct a new object with slicing, concatenation, and so on, and assign it back to the original reference, if needed:
+
+```
+>>> T = (1, 2, 3)
+>>> T[2] = 4							# Error!
+Traceback (most recent call last):
+  File "<stdin>", line 1, in <module>
+TypeError: 'tuple' object does not support item assignment
+
+>>> T = T[:2] + (4,)					# OK: (1, 2, 4)
+>>> T
+(1, 2, 4)
+```
+
+
 
 
 
@@ -493,15 +981,233 @@ It is called a literal because it is _literal_ - you use its value literally. Th
 
 
 
-## Immutable and Mutable
 
-**Numbers, Strings, and Tuples are Immutable**.
 
-> immutability can be used to guarantee that an object remains constant throughout your program
 
-**Lists, Dictionaries, and Sets are Mutable.** they can be changed in place freely, as can most new objects you’ll code with classes.
 
-> mutable objects’ values can be changed at any time and place (and whether you expect it or not).
+
+
+# The Dynamic Typing Interlude 动态类型简介
+
+In Python, types are determined automatically at runtime, not in response to declarations in your code.
+
+## Variables, Objects, and References
+
+**Variable creation**
+
+ A variable (i.e., name), like a, is created when your code first assigns it a value. Future assignments change the value of the already created name. Technically, Python detects some names before your code runs, but you can think of it as though initial assignments make variables.
+
+**Variable types** 
+
+A variable never has any type information or constraints associated with it. The notion of type lives with objects, not names. Variables are generic in nature; they always simply refer to a particular object at a particular point in time.
+
+**Variable use** 
+
+When a variable appears in an expression, it is immediately replaced with the object that it currently refers to, whatever that may be. Further, all variables must be explicitly assigned before they can be used; referencing unassigned variables results in errors.
+
+
+
+**变量在赋值时才创建，他可以引用任何类型的对象，并且必须在引用之前赋值。**
+
+variables are created when assigned, can reference any type of object, and must be assigned before they are referenced.
+
+> 这意味着，不需要通过脚本声明索要使用的名字，必须初始化名字然后才能更新它们。例如，必须把计数器初始化为0，然后才能增加它。
+>
+> This means that you never need to declare names used by your script, but you must initialize names before you can update them; coun-ters, for example, must be initialized to zero before you can add to them.
+
+Names and objects after running the assignment a = 3. Variable a becomes a reference to the object 3. Internally, the variable is really a pointer to the object’s memory space created by running the literal expression 3.
+
+![variable reference object](img/variable reference object.jpg)
+
+
+
+These links from variables to objects are called references in Python—that is, **a reference is a kind of association, implemented as a pointer in memory.**
+
+each time you generate a new value in your script by running an expression, Python creates a new object (i.e., a chunk of memory) to represent that value.
+
+> Python internally caches and reuses certain kinds of unchangeable objects, such as small integers and strings (each 0 is not really a new piece of memory—more on this caching behavior later). But from a logical perspective, it works as though each expression’s result value is a distinct object and each object is a distinct piece of memory.
+
+**Each object also has two standard header fields:** 
+
+- a type designator used to mark the type of the object, 
+
+
+- and a reference counter used to determine when it’s OK to reclaim the object.
+
+### Types Live with Objects, Not Variables
+
+```
+>>> a = 3			# It's an integer
+>>> a = 'spam'		# Now it's a string 
+>>> a = 1.23		# Now it's a floating point
+```
+
+
+
+### Objects Are Garbage-Collected
+
+whenever a name is assigned to a new object, the space held by the prior object is reclaimed if it is not referenced by any other name or object. This automatic reclamation of objects’ space is known as garbage collection
+
+```
+>>> x = 42
+>>> x = 'shrubbery'		# Reclaim 42 now (unless referenced elsewhere)
+
+>>> x = 3.1415		    # Reclaim 'shrubbery' now
+>>> x = [1, 2, 3]		# Reclaim 3.1415 now
+```
+
+when it is assigned the string 'shrubbery', the object 42 is immediately reclaimed (assuming it is not referenced anywhere else) — **the object’s space is automatically thrown back into the free space pool, to be reused for a future object.**
+
+> Internally, Python accomplishes this feat by keeping a counter in every object that keeps track of the number of references currently pointing to that object. As soon as (and exactly when) this counter drops to zero, the object’s memory space is automatically reclaimed.
+
+**garbage collection**
+
+The most immediately tangible benefit of garbage collection is that it means you can use objects liberally without ever needing to allocate or free up space in your script. Python will clean up unused space for you as your program runs.
+
+> Technically speaking, Python’s garbage collection is based mainly upon reference coun-ters, as described here; however, it also has a component that detects and reclaims objects with cyclic references in time. This component can be disabled if you’re sure that your code doesn’t create cycles, but it is enabled by default.
+
+
+
+## Shared References
+
+with multiple names referencing the same object—is usually called a shared reference (and sometimes just a shared object).
+
+```
+>>> a = 3
+>>> b = a
+```
+
+![ shared reference](img/ shared reference.jpg)
+
+the names a and b are not linked to each other directly when this happens.both variables point to the same object via their references.
+
+```
+>>> a = 3
+>>> b = a
+>>> a = 'spam'
+```
+
+![ shared reference2](img/ shared reference2.jpg)
+
+
+
+### Shared References and In-Place Changes
+
+there are objects and operations that perform in-place object changes—Python’s mutable types, including lists, dictionaries, sets and some objects defined with class statements.. For instance, an assignment to an offset in a list actually changes the list object itself in place, rather than generating a brand-new list object.
+
+reference:
+
+```
+mutable objects that support in-place changes，reference：
+
+>>> L1 = [2, 3, 4]		# A mutable object
+>>> L2 = L1				# Make a reference to the same object
+>>> L1[0] = 24			# An in-place change
+
+>>> L1 					# L1 is different
+[24, 3, 4]
+>>> L2 					# But so is L2!
+[24, 3, 4]
+```
+
+#### list copy:
+
+```
+the two variables point to different pieces of memory. copy：
+
+>>> L1 = [2, 3, 4]
+>>> L2 = L1[:]			# Make a copy of L1 (or list(L1), copy.copy(L1), etc.)
+>>> L1[0] = 24
+
+>>> L1 
+[24, 3, 4]
+>>> L2 					# L2 is not changed
+[2, 3, 4]
+
+Note that this slicing technique won’t work on the other major mutable core types, dictionaries and sets, because they are not sequences
+```
+
+#### copy a dictionary or set:
+
+1. X.copy() 		(lists have one as of Python 3.3 as well)
+
+2. pass the original object to their type names, dict and set.
+
+3. copy module has a call for copying any object type generically, copying nested object structures—a dictionary with nested lists, for example:
+
+   ```
+   import copy 
+   X = copy.copy(Y) 		# Make top-level "shallow" copy of any object Y 
+   X = copy.deepcopy(Y)	# Make deep copy of any object Y: copy all nested parts
+   ```
+
+### Shared References and Equality
+
+Python caches and reuses small integers and small strings.
+
+```
+>>> L = [1, 2, 3]
+>>> M = L			# M and L reference the same object
+>>> L == M 			# Same values 
+True
+>>> L is M 			# Same objects
+True
+```
+
+```
+>>> L = [1, 2, 3]
+>>> M = [1, 2, 3]	# M and L reference different objects 
+>>> L == M 			# Same values 
+True
+>>> L is M 			# Different objects
+False
+```
+
+> the == operator, tests whether the two referenced objects have the same values;
+>
+> the is operator, instead tests for object identity—it returns True only if both names point to the exact same object, (it is a much stronger form of equality testing and is rarely applied in most programs.)
+
+small integers and strings are cached and reused:
+
+```
+>>> X = 42
+>>> Y = 42		# Should be two different objects
+>>> id(x)
+4297372000
+>>> id(y)
+4297372000
+>>> X == Y 
+True
+>>> X is Y 		# Same object anyhow: caching at work!
+True
+
+X and Y should be == (same value), but not is (same object) because we ran two different literal expressions (42). Because small integers and strings are cached and reused, though, is tells us they reference the same single object.
+
+>>> x = 123456
+>>> y = 123456
+>>> id(x)
+4298641296
+>>> id(y)
+4323389840
+>>> x == y
+True
+>>> x is y
+False
+```
+
+ask Python how many references there are to an object: 
+
+```
+>>> import sys
+>>> sys.getrefcount(1)		# 647 pointers to this shared piece of memory
+647
+
+the getrefcount function in the standard sys module returns the object’s reference count.
+```
+
+> Because you cannot change immutable numbers or strings in place, it doesn’t matter how many references there are to the same object—every reference will always see the same, unchanging value. Still, this behavior reflects one of the many ways Python optimizes its model for execution speed.
+
+
 
 
 
