--- a/Python/Python Study Notes/2. Basic.md
+++ b/Python/Python Study Notes/2. Basic.md
@@ -525,7 +525,7 @@ One note on type names: as of Python 2.2, each core type has a new built-in name
 
 the types standard library module in Python 3.X provides additional type names for types that are not available as built-ins
 
-do type tests with the `isinstance` function
+#### Do type tests with the `isinstance` function:
 
 ```
 >>> type([1]) == type([])				# Compare to type of another list
