--- a/Python/Python Study Notes/2. Basic.md
+++ b/Python/Python Study Notes/2. Basic.md
@@ -981,6 +981,111 @@ It is called a literal because it is _literal_ - you use its value literally. Th
 
 
 
+## 变量命名规则 / Variable Name Rules
+
+In Python, **names come into existence when you assign values to them**, but there are a few rules to follow when choosing names for the subjects of your programs:
+
+**Syntax**: 
+
+(underscore or letter) + (any number of letters, digits, or underscores) Variable names must start with an underscore or letter, which can be followed by any number of letters, digits, or underscores.
+
+>  `_spam`, `spam`, and `Spam_1` are legal names, but `1_Spam` , `spam$` , and `@#!` are not.
+
+**Case matters**: `SPAM` is not the same as `spam` 
+
+Python always pays attention to case in programs, both in names you create and in reserved words. 
+
+> For instance, the names `X` and `x` refer to two different variables. For portability, case also matters in the names of imported module files, even on platforms where the file systems are case-insensitive. That way, your imports still work after programs are copied to differing platforms.
+
+**Reserved words are off-limits** 
+
+Names you define cannot be the same as words that mean special things in the Python language. 
+
+> For instance, if you try to use a variable name like class, Python will raise a syntax error, but `klass` and `Class` work fine. Table  lists the words that are currently reserved (and hence off-limits for names of your own) in Python.
+
+
+
+## 命名惯例 / Naming conventions 
+
+**there is also a set of naming conventions—rules that are not required but are followed in normal practice**. For instance, because names with two leading and trailing underscores (e.g., `__name__`) generally have special meaning to the Python in-terpreter, you should avoid this pattern for your own names.
+
+Here is a list of the conventions Python follows:
+
+- Names that begin with a single underscore ( `_X` ) are not imported by a `from module import *` statement
+
+
+- Names that have two leading and trailing underscores ( `__X__` ) are system-defined names that have special meaning to the interpreter.
+
+
+- Names that begin with two underscores and do not end with two more ( `__X` ) are localized (“mangled”) to enclosing classes
+
+
+- The name that is just a single underscore ( `_` ) retains the result of the last expression when you are working interactively.
+
+class names commonly start with an uppercase letter and module names with a lowercase letter, and that the name self, though not reserved, usually has a special role in classes.
+
+**Names have no type, but objects do**
+
+objects have a type (e.g., integer, list) and may be mutable or not. Names (a.k.a. variables), on the other hand, are always just references to objects; they have no notion of mutability and have no associated type information, apart from the type of the object they happen to reference at a given point in time.
+
+```
+>>> x = 0				# x bound to an integer object
+>>> x = "Hello"			# Now it's a string
+>>> x = [1, 2, 3]		# And now it's a list
+```
+
+**For additional naming suggestions**:
+
+> Python’s semi-official style guide: Python PEP 8
+>
+> https://www.python.org/dev/peps/pep-0008/
+
+
+
+
+
+
+
+## 保留字 / reserved words
+
+```
+Python 3.X reserved words
+
+False 		class		finally		is			return
+None 		continue	for			lambda		try
+True 		def			from		nonlocal	while
+and 		del			global		not			with
+as 			elif		if			or			yield
+assert 		else		import		pass
+break		except		in			raise
+```
+
+In Python 2.X, the set of reserved words differs slightly:
+
+- print is a reserved word, because printing is a statement, not a built-in function (more on this later in this chapter).
+
+
+- exec is a reserved word, because it is a statement, not a built-in function.
+
+
+
+- nonlocal is not a reserved word because this statement is not available.
+
+In older Pythons the story is also more or less the same, with a few variations:
+
+- with and as were not reserved until 2.6, when context managers were officially enabled.
+
+
+- yield was not reserved until Python 2.3, when generator functions came online.
+
+
+
+- yield morphed from statement to expression in 2.5, but it’s still a reserved word, not a built-in function.
+
+> you cannot redefine reserved words by assignment (e.g., `and = 1` results in a syntax error)
+
+
+
 
 
 
